# Serrarien

./: CMakeLists.txt  LICENSE  README.md  main.cpp
engine/: GameEngine.cpp  GameEngine.hpp  HUD.hpp  Material.hpp  Mesh.cpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Transformation.hpp  Window.cpp  Window.hpp
engine/objects/: Object.cpp  Object.hpp
engine/objects/components/: Item.hpp  Text.cpp
engine/objects/gameItems/: Block.cpp  Block.hpp  GameItem.hpp  Player.cpp  Player.hpp  Variant.hpp
game/: Game.cpp  ResourcesManager.cpp  ResourcesManager.hpp
lib/: glad.c
res/: banner.xcf
res/shaders/: scene_shader.vs
src/: CMakeLists.txt
src/engine/: Camera.cpp  Camera.hpp  GameEngine.cpp  HUD.cpp  Material.cpp  Mesh.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Transformation.cpp  Transformation.hpp  Window.cpp  Window.hpp
src/engine/exceptions/: Exception.hpp  FontException.hpp  InitException.hpp  TextureException.hpp
src/engine/objects/components/: Component.hpp  Text.cpp  Text.hpp
src/engine/objects/gameItems/: GameItem.cpp
src/game/: Game.cpp  Game.hpp  ResourcesManager.cpp  ResourcesManager.hpp
src/game/objects/gameItems/: Block.hpp  Player.hpp
src/res/shaders/: hud_shader.fs  hud_shader.vs  scene_shader.fs
tests/: CMakeLists.txt
